Remove editor pane space

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Grapse | live man page editor</title>
+    <title>Manview | Dynamic Unix man page viewer</title>
     <meta name="description" content="Online man page editor with support for groff, roff, doc and an">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -29,7 +29,7 @@
 
 
     <header role="banner">
-      <h1 class="banner-title">.\" Grapse</h1>
+      <h1 class="banner-title">manview</h1>
 
       <div class="icons-bar">
         <a href="https://github.com/roperzh/grapse" target="_blank"><i class="icon-github"></i></a>
@@ -53,16 +53,12 @@
       </form>
     </section>
 
-    <section class="live-preview-l">
-
-<section class="code-box">
-  <h3 class="code-box-header">Preview</h3>
-  <section id="result" class="groff-output" data-behavior="live-preview">
-
+<section class="live-preview-l">
+  <section class="code-box">
+    <section id="result" class="groff-output" data-behavior="live-preview">
+    </section>
   </section>
 </section>
-    </section>
-
 
 
     <script src="assets/build/js/scripts.js"></script>
