--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Manview | Dynamic Unix man page viewer</title>
-    <meta name="description" content="Online man page editor with support for groff, roff, doc and an">
+    <meta name="description" content="Online man page viewer with support for groff, roff, doc and an">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -35,23 +35,6 @@
         <a href="https://github.com/roperzh/grapse" target="_blank"><i class="icon-github"></i></a>
       </div>
     </header>
-
-    <section class="toolbar">
-      <form action="#">
-<!--         <div class="word-count">
-          <span class="word-count-label">Words:</span>
-          <span class="word-count-numbers" data-behavior="word-count">0</span>
-        </div> -->
-
-        <div class="switch">
-          <span class="switch-label">doc</span>
-          <input id="macro-switch" class="cmn-toggle cmn-toggle-round-flat" type="checkbox" data-behavior="macro-switch">
-          <label for="macro-switch"></label>
-          <span class="switch-label">an</span>
-        </div>
-
-      </form>
-    </section>
 
 <section class="live-preview-l">
   <section class="code-box">
