Display and hyperlink man page title

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
     <header role="banner">
-      <h1 class="banner-title">manview</h1>
+      <h1 class="banner-title" data-behavior="set-title"><a href='https://github.com/dspinellis/manview'>manview</a></h1>
 
       <div class="icons-bar">
         <a href="https://github.com/roperzh/grapse" target="_blank"><i class="icon-github"></i></a>
