Update names to match functionality

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <section class="live-preview-l">
   <section class="code-box">
-    <section id="result" class="groff-output" data-behavior="live-preview">
+    <section id="result" class="groff-output" data-behavior="page-view">
     </section>
   </section>
 </section>
